--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,16 @@
 {
-    "buildCommand": "cd frontend && npm install && npm run build",
-    "outputDirectory": "frontend/dist/frontend/browser",
-    "rewrites": [
-      {
-        "source": "/api/:path*",
-        "destination": "https://AQUI_IRA_TU_URL_DE_RAILWAY/:path*"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/[^.]+",
-        "dest": "/index.html"
-      }
-    ]
-  }
-  ```
-  
-  **⚠️ NOTA**: Dejaremos `AQUI_IRA_TU_URL_DE_RAILWAY` por ahora, lo cambiaremos después.
-  
-  
+  "buildCommand": "cd frontend && npm install && ng build --output-path=dist/frontend/browser",
+  "outputDirectory": "frontend/dist/frontend/browser",
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://proyecto2-sensores-production.up.railway.app/:path*"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/[^.]+",
+      "dest": "/index.html"
+    }
+  ]
+}
