--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,22 @@
 {
-  "buildCommand": "cd frontend && npx ng build --output-path=dist/frontend/browser",
-  "outputDirectory": "frontend/dist/frontend/browser",
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/api/:path*",
-      "destination": "https://proyecto2-sensores-production.up.railway.app/:path*"
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist/frontend/browser"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "https://proyecto2-sensores-production.up.railway.app/$1"
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
