--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/node",
+      "src": "package.json",
+      "use": "@vercel/static-build",
       "config": {
-        "zeroConfig": true
+        "distDir": "dist/browser"
       }
     }
   ],
@@ -17,7 +17,5 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ],
-  "buildCommand": "cd frontend && npm install --legacy-peer-deps && npx ng build --output-path=dist/frontend/browser",
-  "outputDirectory": "frontend/dist/frontend/browser"
+  ]
 }
