--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,26 @@
 {
-  "framework": "angular",
-  "buildCommand": "npx --yes @angular/cli@latest build --configuration production",
-  "installCommand": "npm ci --legacy-peer-deps",
-  "outputDirectory": "dist/frontend/browser",
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/api/:path*",
-      "destination": "https://proyecto2-sensores-production.up.railway.app/:path*"
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist/frontend/browser"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "https://proyecto2-sensores-production.up.railway.app/$1",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "cache-control": "no-cache"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
